--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/ws": "^7.2.6",
     "eslint": "^7.3.1",
     "eslint-plugin-import": "^2.22.0",
+    "mysql2": "^2.1.0",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5"
@@ -29,8 +30,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "knex": "^0.21.1",
     "morgan": "^1.10.0",
-    "mysql2": "^2.1.0",
+    "mysql": "^2.18.1",
     "path": "^0.12.7",
     "pg": "^8.2.1"
   }
